--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,71 +1,60 @@
 ---
-title: Introduction
-description: 'Welcome to the home of your new documentation'
+title: 'Documentation'
+description: 'Learn how to use the Beyond API'
+icon: 'book-open'
 ---
 
-<img
-  className="block dark:hidden"
-  src="/images/hero-light.svg"
-  alt="Hero Light"
-/>
-<img
-  className="hidden dark:block"
-  src="/images/hero-dark.svg"
-  alt="Hero Dark"
-/>
+Welcome to the Beyond API documentation. This guide will help you get started with integrating our AI services into your applications.
 
-## Setting up
-
-The first step to world-class documentation is setting up your editing environments.
+## Quick Start
 
 <CardGroup cols={2}>
-  <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
-  >
-    Get your docs set up locally for easy development
+  <Card title="Authentication" icon="key" href="/authentication">
+    Learn how to authenticate your API requests
   </Card>
-  <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
-  >
-    Preview your changes before you push to make sure they're perfect
+  <Card title="Base URL" icon="link" href="/base-url">
+    Understand the API base URL and endpoints
+  </Card>
+  <Card title="Rate Limits" icon="gauge-high" href="/rate-limits">
+    View our rate limits and best practices
+  </Card>
+  <Card title="Content Types" icon="code" href="/content-type">
+    Learn about required content types
   </Card>
 </CardGroup>
 
-## Make it yours
-
-Update your docs to your brand and add valuable content for the best user conversion.
+## Core Features
 
 <CardGroup cols={2}>
-  <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
-  >
-    Customize your docs to your company's colors and brands
+  <Card title="Chat Completions" icon="message-bot" href="/api-reference/chat-completions">
+    Generate conversational AI responses
   </Card>
-  <Card
-    title="Reference APIs"
-    icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
-  >
-    Automatically generate endpoints from an OpenAPI spec
+  <Card title="Image Generation" icon="image" href="/api-reference/image-generation">
+    Create AI-generated images from text
   </Card>
-  <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/components/accordion"
-  >
-    Build interactive features and designs to guide your users
+</CardGroup>
+
+## Resources
+
+<CardGroup cols={3}>
+  <Card title="Best Practices" icon="book-bookmark" href="/best-practices">
+    Guidelines for optimal integration
   </Card>
-  <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/customers"
-  >
-    Check out our showcase of our favorite documentation
+  <Card title="Error Handling" icon="triangle-exclamation" href="/error-handling">
+    Learn how to handle API errors
+  </Card>
+  <Card title="Support" icon="messages" href="/support">
+    Get help with implementation
+  </Card>
+</CardGroup>
+
+## Additional Information
+
+<CardGroup cols={2}>
+  <Card title="Changelog" icon="clock-rotate-left" href="/changelog">
+    Track API updates and changes
+  </Card>
+  <Card title="License" icon="scale-balanced" href="/license">
+    View licensing information
   </Card>
 </CardGroup>
