--- a/introduction.mdx
+++ b/introduction.mdx
@@ -2,6 +2,7 @@
 title: 'Documentation'
 description: 'Learn how to use the Beyond API'
 icon: 'book-open'
+image: '/images/hero.png'
 ---
 
 Welcome to the Beyond API documentation. This guide will help you get started with integrating our AI services into your applications.
