--- a/introduction.mdx
+++ b/introduction.mdx
@@ -3,6 +3,10 @@ title: 'Documentation'
 description: 'Learn how to use the Beyond API'
 icon: 'book-open'
 image: '/images/hero.png'
+style: {
+  background: 'black',
+  color: 'white'
+}
 ---
 
 Welcome to the Beyond API documentation. This guide will help you get started with integrating our AI services into your applications.
