changes to docs

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -7,6 +7,11 @@ style: {
   background: 'black',
   color: 'white'
 }
+openGraph:
+  image: '/images/hero.png'
+  title: 'Beyond API Documentation'
+  description: 'Learn how to use the Beyond API'
+  logo: '/logo/light.svg'
 ---
 
 Welcome to the Beyond API documentation. This guide will help you get started with integrating our AI services into your applications.
