changes to link preview

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Documentation'
+title: 'Beyond API Documentation'
 description: 'Learn how to use the Beyond API'
 icon: 'book-open'
 image: '/images/hero.png'
@@ -12,6 +12,8 @@ openGraph:
   title: 'Beyond API Documentation'
   description: 'Learn how to use the Beyond API'
   logo: '/logo/light.svg'
+  siteName: 'Beyond API'
+  type: 'website'
 ---
 
 Welcome to the Beyond API documentation. This guide will help you get started with integrating our AI services into your applications.
