--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,19 +1,8 @@
 ---
-title: 'Beyond API Documentation'
+title: 'Beyond API'
 description: 'Learn how to use the Beyond API'
 icon: 'book-open'
 image: '/images/hero.png'
-style: {
-  background: 'black',
-  color: 'white'
-}
-openGraph:
-  image: '/images/hero.png'
-  title: 'Beyond API Documentation'
-  description: 'Learn how to use the Beyond API'
-  logo: '/logo/light.svg'
-  siteName: 'Beyond API'
-  type: 'website'
 ---
 
 Welcome to the Beyond API documentation. This guide will help you get started with integrating our AI services into your applications.
