changes to description

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Beyond API'
-description: 'Learn how to use the Beyond API'
+description: 'Build AI Agents and apps using Beyond’s blazing fast AI inference protocol'
 icon: 'book-open'
 image: '/images/hero.png'
 ---
