--- a/index.mdx
+++ b/index.mdx
@@ -1,12 +1,12 @@
 ---
 title: 'Beyond API'
-description: 'Learn how to use the Beyond API'
+description: 'Build AI Agents and apps using Beyond’s blazing fast AI inference protocol'
 icon: 'book-open'
 image: '/images/hero.png'
 openGraph:
   image: '/images/hero.png'
   title: 'Beyond API'
-  description: 'Learn how to use the Beyond API'
+  description: 'Build AI Agents and apps using Beyond’s blazing fast AI inference protocol'
   logo: '/logo/light.svg'
   siteName: 'Beyond API'
   type: 'website'
