--- a/index.mdx
+++ b/index.mdx
@@ -13,3 +13,14 @@ openGraph:
 ---
 
 <meta http-equiv="refresh" content="0;url=/introduction" /> 
+
+
+## About
+
+### Overview
+
+Welcome to the official documentation for Beyond Network: Infinite LLM Inference Network. 
+
+Beyond Network is building the world's largest distributed LLM inference network - for developers to scale their LLM apps while cutting costs.
+
+
