--- a/index.mdx
+++ b/index.mdx
@@ -19,8 +19,33 @@ openGraph:
 
 ### Overview
 
-Welcome to the official documentation for Beyond Network: Infinite LLM Inference Network. 
+Welcome to the official documentation for Beyond Network: AI Inference Network Powering Autonomous Agents.
 
-Beyond Network is building the world's largest distributed LLM inference network - for developers to scale their LLM apps while cutting costs.
+## Introduction
 
+### Empowering Developers with Choice and Transparency
 
+Beyond Network revolutionizes AI inference, providing developers with choice and transparency. The platform integrates open-source SOTA models and centralized services. Select the optimal approach for your use case - cost-efficiency via distributed inference or speed with centralized solutions.
+
+### OnChain Payments
+
+Beyond Network provides secure, transparent, efficient onchain payments for AI inference. Eliminates managing multiple API keys and vendors. Pay directly onchain with crypto.
+
+### Autonomous Agents Potential
+
+Beyond Network empowers autonomous agents to access and pay for compute through built-in wallets independently. Agents interact with Beyond Network via smart contracts—endless possibilities for autonomous agent development.
+
+### Inference Verifiability and Onchain Proofs
+
+Beyond Network ensures trust and transparency. Verify inference integrity with onchain proofs.
+
+## Key Features
+
+- **Flexible Model Selection**: Open-source SOTA models and centralized services.
+- **On-Chain Payments**: Secure Onchain payments with crypto.
+- **Autonomous Agent Empowerment**: Agents independently access and pay for inference.
+- **Inference Verifiability**: On-chain proofs for tamper-proof, auditable results.
+- **Cost-Efficiency**: Optimized distributed inference system minimizes costs.
+- **Scalability**: Scale AI inference needs with a robust infrastructure.
+
+Join DeAI revolution with Beyond Network. Unlock the potential of autonomous agents and decentralized AI Apps.
