--- a/index.mdx
+++ b/index.mdx
@@ -27,7 +27,7 @@ Welcome to the official documentation for Beyond Network: AI Inference Network P
 
 Beyond Network revolutionizes AI inference, providing developers with choice and transparency. The platform integrates open-source SOTA models and centralized services. Select the optimal approach for your use case - cost-efficiency via distributed inference or speed with centralized solutions.
 
-### OnChain Payments
+### Onchain Payments
 
 Beyond Network provides secure, transparent, efficient onchain payments for AI inference. Eliminates managing multiple API keys and vendors. Pay directly onchain with crypto.
 
@@ -42,7 +42,7 @@ Beyond Network ensures trust and transparency. Verify inference integrity with o
 ## Key Features
 
 - **Flexible Model Selection**: Open-source SOTA models and centralized services.
-- **On-Chain Payments**: Secure Onchain payments with crypto.
+- **Onchain Payments**: Secure Onchain payments with crypto.
 - **Autonomous Agent Empowerment**: Agents independently access and pay for inference.
 - **Inference Verifiability**: On-chain proofs for tamper-proof, auditable results.
 - **Cost-Efficiency**: Optimized distributed inference system minimizes costs.
